--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
   </section>
   <!-- Portfolio Section End -->
   
+  <!-- Pricing Section Start -->
+  <!-- Pricing Section End -->
+  
   <main></main>
   
 
