--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
       <!-- Portfolio Links Start -->
       <div class="portfolio-links mb-5">
         <ul class="d-flex list-unstyled justify-content-center text-uppercase">
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">all works</a></li>
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">web design</a></li>
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">ui design</a></li>
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">branding</a></li>
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">logo design</a></li>
-          <li><a href="#" class="text-decoration-none text-light px-3 py-2 m-2">illustration</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">all works</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">web design</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">ui design</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">branding</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">logo design</a></li>
+          <li><a href="javascript:void(0)" class="text-decoration-none text-light px-3 py-2 m-2">illustration</a></li>
         </ul>
       </div>
       <!-- Portfolio Links End -->
