pricing section completed

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
         <div class="col-6 col-lg-3">
           <div class="service-content position-relative">
             <img class="d-block w-100" src="assets/img/s01.jpg" alt="">
-            <div class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="">
                 <i class="fa-brands fa-linkedin-in fa-2x"></i>
               </a>
@@ -212,7 +213,8 @@
         <div class="col-6 col-lg-3">
           <div class="service-content position-relative">
             <img class="d-block w-100" src="assets/img/s02.jpg" alt="">
-            <div class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="">
                 <i class="fa-brands fa-linkedin-in fa-2x"></i>
               </a>
@@ -227,7 +229,8 @@
         <div class="col-6 col-lg-3">
           <div class="service-content position-relative">
             <img class="d-block w-100" src="assets/img/s03.jpg" alt="">
-            <div class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="">
                 <i class="fa-brands fa-linkedin-in fa-2x"></i>
               </a>
@@ -242,7 +245,8 @@
         <div class="col-6 col-lg-3">
           <div class="service-content position-relative">
             <img class="d-block w-100" src="assets/img/s04.jpg" alt="">
-            <div class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="service-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="">
                 <i class="fa-brands fa-linkedin-in fa-2x"></i>
               </a>
@@ -253,7 +257,7 @@
           </div>
         </div>
         <!-- Card End -->
-        
+
       </div>
     </div>
   </section>
@@ -291,7 +295,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p01.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">Web Design</a>
             </div>
           </div>
@@ -301,7 +306,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p02.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">UI Design</a>
             </div>
           </div>
@@ -311,7 +317,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p03.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">Branding</a>
             </div>
           </div>
@@ -321,7 +328,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p04.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">Logo Design</a>
             </div>
           </div>
@@ -331,7 +339,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p05.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">Illustration</a>
             </div>
           </div>
@@ -341,7 +350,8 @@
         <div class="col-6 col-lg-4">
           <div class="portfolio-content position-relative">
             <img class="d-block w-100" src="assets/img/p06.jpg" alt="">
-            <div class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
+            <div
+              class="portfolio-overlay w-100 h-100 position-absolute top-0 left-100 d-flex justify-content-center align-items-center">
               <a href="javascript:void(0)" class="h3 text-decoration-none">Web Design</a>
             </div>
           </div>
@@ -352,12 +362,150 @@
     </div>
   </section>
   <!-- Portfolio Section End -->
-  
+
   <!-- Pricing Section Start -->
+  <section id="pricing" class="py-5">
+    <div class="container p-5">
+      <!-- Pricing Title Start -->
+      <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+        <div class="title-block">
+          <h3>our pricing</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consequatur provident totam quidem dolores vel
+            quibusdam ratione ex repellat ratione ex repellat ratione ex repellat voluptatibus.</p>
+        </div>
+      </div>
+      <!-- Pricing Title End -->
+
+      <!-- Pricing Content Section Start -->
+      <div class="row gy-4">
+        <!-- Card Start -->
+        <div class="col-12 col-md-6 col-lg-3 px-4">
+          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+            <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
+              <h3><sup>$</sup>
+                55<sub>/MO</sub></h3>
+              <h3>Basic</h3>
+            </div>
+            <div class="pricing-body">
+              <ul class="list-unstyled">
+                <li>
+                  <p>1 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>256 GB Storage</p>
+                </li>
+                <li>
+                  <p>5 Databases</p>
+                </li>
+                <li>
+                  <p>Free Domain</p>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="px-3 py-1 mt-2 text-decoration-none">order now</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Card End -->
+        <!-- Card Start -->
+        <div class="col-12 col-md-6 col-lg-3 px-4">
+          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+            <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
+              <h3><sup>$</sup>
+                55<sub>/MO</sub></h3>
+              <h3>Basic</h3>
+            </div>
+            <div class="pricing-body">
+              <ul class="list-unstyled">
+                <li>
+                  <p>1 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>256 GB Storage</p>
+                </li>
+                <li>
+                  <p>5 Databases</p>
+                </li>
+                <li>
+                  <p>Free Domain</p>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="px-3 py-1 mt-2 text-decoration-none">order now</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Card End -->
+        <!-- Card Start -->
+        <div class="col-12 col-md-6 col-lg-3 px-4">
+          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+            <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
+              <h3><sup>$</sup>
+                55<sub>/MO</sub></h3>
+              <h3>Basic</h3>
+            </div>
+            <div class="pricing-body">
+              <ul class="list-unstyled">
+                <li>
+                  <p>1 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>256 GB Storage</p>
+                </li>
+                <li>
+                  <p>5 Databases</p>
+                </li>
+                <li>
+                  <p>Free Domain</p>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="px-3 py-1 mt-2 text-decoration-none">order now</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Card End -->
+        <!-- Card Start -->
+        <div class="col-12 col-md-6 col-lg-3 px-4">
+          <div class="pricing-content text-center text-light text-uppercase py-2 px-5">
+            <div class="pricing-header d-flex flex-column justify-content-center border border-5 border-light my-3">
+              <h3><sup>$</sup>
+                55<sub>/MO</sub></h3>
+              <h3>Basic</h3>
+            </div>
+            <div class="pricing-body">
+              <ul class="list-unstyled">
+                <li>
+                  <p>1 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>256 GB Storage</p>
+                </li>
+                <li>
+                  <p>5 Databases</p>
+                </li>
+                <li>
+                  <p>Free Domain</p>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="px-3 py-1 mt-2 text-decoration-none">order now</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Card End -->
+
+      </div>
+    </div>
+  </section>
   <!-- Pricing Section End -->
-  
+
   <main></main>
-  
+
 
 
 
