footer section completed

--- a/index.html
+++ b/index.html
@@ -507,6 +507,31 @@
   <main></main>
 
 
+  <!-- Footer Section Start -->
+  <footer id="footer" class="bg-dark text-light">
+    <section class="container">
+      <div class="row pt-3 text-end">
+        <div class="footer-text col-8">
+          <p>Copyright &copy; 2024 designed by <a href="https://www.facebook.com/nr.sazib" target="_blank" class="text-decoration-none">Naimur Rahman Sazib</a></p>
+        </div>
+        <div class="footer-links col-4">
+          <a href="https://www.facebook.com/nr.sazib"  target="_blank">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="https://www.facebook.com/nr.sazib"  target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="https://www.facebook.com/nr.sazib"  target="_blank">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.facebook.com/nr.sazib"  target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+  </footer>
+  <!-- Footer Section End -->
 
 
   <!-- Bootstrap JS CDN -->
